--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Si Pham (phamtrisi@gmail.com)",
   "bin": {},
   "scripts": {},
-  "main": "",
+  "main": "Airbnb.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/phamtrisi/airapi.git"
